# rust-tanstack-query

./: .gitignore  Cargo.toml  README.md  api.json  package.json  pnpm-lock.yaml  tsconfig.json
src/: main.rs
ts/: api.d.ts  index.tsx
