[package]
name = "tsdst_rst"
version = "0.1.0"
edition = "2024"

[dependencies]
aide = { version = "0.15", features = [
    "axum",
    "redoc",
    "swagger",
    "scalar",
    "axum-json",
    "macros",
] }
axum = { version = "0.8", features = ["macros"] }
schemars = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.0", features = ["full"] }
wasm-bindgen = { version = "0.2" }
